# test2

./: CMakeLists.txt  foo.c  main.c  main.cpp
